# My_Game_Project_IU5

My_Game_Project/: CMakeLists.txt  Entity.cpp  Entity.h  Game.cpp  Game.h  main.cpp
My_Game_Project/States/: GameState.cpp  GameState.h  State.cpp  State.h
